--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tiptap/starter-kit": "^2.5.8",
     "@uploadthing/react": "^6.7.2",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "arctic": "^1.9.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
